2011-10-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c, lib/oci8/datetime.rb, lib/oci8/object.rb:
	    add OCI8::BindType::OCITimestamp, OCI8::BindType::LocalDateTime,
	    OCI8::BindType::UTCDateTime, OCI8::BindType::LocalTime and
	    OCI8::BindType::UTCTime. The first is used for internal use.
	    The others are used for timestamp (without time zone) datatype.

2011-10-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/ocidatetime.c, ext/oci8/oradate.c: delete
	    subversion keywords.
	* ext/oci8/env.c, ext/oci8/oci8.h, ext/oci8/thread_util.c,
	  ext/oci8/thread_util.h: use thread-local errhp not only at ruby 1.9
	    and rubinius, but also ruby 1.8 configured with --enable-pthread.

2011-10-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/connection_pool.c, ext/oci8/lob.c,
	  ext/oci8/metadata.c, ext/oci8/object.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/ocihandle.c,
	  ext/oci8/ocinumber.c, ext/oci8/oradate.c, ext/oci8/stmt.c:
	    rename oci8_*_class to oci8_*_vtable because they correspond to
	    virtual method tables (vtable) in C++.

2011-09-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/oci8lib.c, test/test_break.rb:
	    clear an executuing thread information in a connection when a SQL
	    executions is canceled by Thread#kill or Timeout::timeout.
	    (reported by Aaron Qian)
	    See: http://rubyforge.org/forum/forum.php?thread_id=50112&forum_id=1078

2011-09-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/connection_pool.c: run connection-pool cleanup functions
	    in a native thread not to block GC.
	* ext/oci8/oci8.c: use xfree() instead of free() to release memory
	    allocated by xmalloc().

2011-08-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/thread_util.c, ext/oci8/thread_util.h: